[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Subtitled-video-Pro"
version = "1.0.9"
description = "A professional video subtitling tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6",
    "requests",
    "playwright"
]
